# secretsatan

./: .env.example  .gitignore  Cargo.toml  build.rs  config.notsecret.json  package-lock.json  package.json  tsconfig.json
src/: app_errs.rs  main.rs  main.ts
