[package]
name = "secretsatan"
version = "0.1.0"
edition = "2024"

[dependencies]
async-sqlite = { version = "0.5.3", default-features = false }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "std", "clock", "now"] }
color-eyre = "0.6.5"
dotenv = "0.15.0"
duration-str = { version = "0.18.0", default-features = false, features = ["chrono"] }
mnemonic = "1.1.1"
poise = "0.6.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
chrono = { version = "0.4.42", features = ["now"] }
